--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,5 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +9,11 @@
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <!-- css -->
     <link rel="stylesheet" href="static/css/styles.css">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+
+    <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
     <!-- As a heading -->
     <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -28,18 +33,54 @@
                             <h5 class="card-title">Audio Sample</h5>
                             <!-- Departure -->
                             <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-                                <input type="file" name = "file" id="upload" />
-                                </audio>
+                            <input type="file" name="file" id="upload" />
+                            </audio>
                         </div>
                     </div>
                 </div>
             </div>
-                
+
             <!-- Submit -->
-            <input type="submit" value="Submit" class="btn btn-secondary">
+            <input type="submit" value="Submit" class="btn btn-secondary my-3">
         </form>
         <br>
         <br>
+
+        <audio controls>
+
+            <source src="./EnglishPlus_L2_Unit1.mp3" type="audio/mpeg">
+            Your browser does not support the audio element.
+        </audio>
+        <div class="audio-container">
+            <div class="track-name">
+                the name of the track
+
+            </div>
+            <div class="audio">
+
+            </div>
+            <div class="buttons ml-2 d-flex">
+                <span class="play-btn btn">
+                    <i class="fas fa-play"></i>
+                    <i class="fas fa-pause"></i>
+                </span>
+                <span class="stop-btn btn">
+                    <i class="fas fa-stop"></i>
+                </span>
+                <span class="mute-btn btn">
+                    <i class="fas fa-volume-up"></i>
+                    <i class="fas fa-volume-mute"></i>
+                </span>
+               
+                    <input type="range" min="0" max="1" step="0.1" class="volume-slider ml-2" />
+              
+            </div>
+
+        </div>
+
+
+        <br />
+        <br />
         <p class="text-start">{{ prediction_probability }}</p>
         <p class="text-start">{{ prediction_emotion }}</p>
         <br>
@@ -56,5 +97,14 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
         integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
         crossorigin="anonymous"></script>
+        <script src="https://unpkg.com/wavesurfer.js"></script>
+
+    <script src="./main.js">
+
+    </script>
+
+
+
 </body>
+
 </html>
